plugins {
    id 'application'
    id 'checkstyle'
    id 'jacoco'
    id 'pmd'
    id 'com.github.ben-manes.versions' version '0.51.0'
    id "info.solidsoft.pitest" version '1.9.0'
    id "io.freefair.lombok" version '9.2.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.owasp.dependencycheck' version '10.0.4'
    id 'org.sonarqube' version '7.2.3.7755'
    id 'org.springframework.boot' version '3.5.14'
    id 'org.flywaydb.flyway' version '9.22.3'
    id 'au.com.dius.pact' version '4.6.20'
    id 'uk.gov.hmcts.java' version '0.12.68'
    id 'org.gradle.test-retry' version '1.6.4'
    id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
}

apply plugin: 'java'
apply plugin: 'project-report'
apply plugin: 'idea'

mainClassName = 'uk.gov.hmcts.reform.iacaseapi.Application'
def jarName = 'ia-case-api.jar'

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '-parameters',
            '-Xlint:deprecation',
            '-Xlint:unchecked',
    ]
}

compileJava {
    options.compilerArgs += ["-Werror"]
}

compileTestJava {
    options.compilerArgs += ["-Werror"]
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()

    testLogging {
        exceptionFormat = 'full'
    }
}

sourceSets {

    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/integrationTest/java')
        }
        resources.srcDir file('src/integrationTest/resources')
    }

    functionalTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/functionalTest/java')
        }
        resources.srcDir file('src/functionalTest/resources')
    }

    smokeTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/smokeTest/java')
        }
        resources.srcDir file('src/smokeTest/resources')
    }

    contractTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            srcDir file('src/contractTest/java')
        }
        resources.srcDir file('src/contactTest/resources')
    }
}

processSmokeTestResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processIntegrationTestResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processFunctionalTestResources {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

idea {
    module {
        testSources.from(
                project.sourceSets.integrationTest.java.srcDirs,
                project.sourceSets.functionalTest.java.srcDirs,
                project.sourceSets.smokeTest.java.srcDirs,
                project.sourceSets.contractTest.java.srcDirs
        )
        testResources.from(
                project.sourceSets.integrationTest.resources.srcDirs,
                project.sourceSets.functionalTest.resources.srcDirs,
                project.sourceSets.smokeTest.resources.srcDirs,
                project.sourceSets.contractTest.resources.srcDirs
        )
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestCompile.extendsFrom testCompile
    integrationTestRuntime.extendsFrom testRuntime
    functionalTestImplementation.extendsFrom testImplementation
    functionalTestCompile.extendsFrom testCompile
    functionalTestRuntime.extendsFrom testRuntime
    contractTestImplementation.extendsFrom testImplementation
    contractTestCompile.extendsFrom testCompile
    contractTestRuntime.extendsFrom testRuntime
}

checkstyle {
    maxWarnings = 0
    toolVersion = '13.4.2'
    configFile = new File(rootDir, 'config/checkstyle/checkstyle.xml')
    maxWarnings(0)
}

pmd {
    toolVersion = '7.14.0'
    ignoreFailures = true
    sourceSets = [sourceSets.main, sourceSets.test, sourceSets.integrationTest, sourceSets.functionalTest, sourceSets.smokeTest]
    reportsDir = file("${project.getLayout().getBuildDirectory()}/reports/pmd")
    ruleSets = [
            'category/java/errorprone.xml',
            'category/java/bestpractices.xml'
    ]
}

tasks.register('integration', Test) {
    description = 'Runs the integration tests.'
    group = 'Verification'
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
}

tasks.register('functional', Test) {
    description = 'Runs the functional tests.'
    group = 'Verification'

    systemProperty "scenario", System.getProperty('scenario')
    systemProperty "file.encoding", "UTF-8"
    testClassesDirs = sourceSets.functionalTest.output.classesDirs
    classpath = sourceSets.functionalTest.runtimeClasspath
    finalizedBy aggregate
    testLogging {
        showStandardStreams = true
        showCauses = true
        showExceptions = true
        showStackTraces = true
    }
}

tasks.register('smoke', Test) {
    description = 'Runs the smoke tests.'
    group = 'Verification'
    testClassesDirs = sourceSets.smokeTest.output.classesDirs
    classpath = sourceSets.smokeTest.runtimeClasspath
}

tasks.register('contract', Test) {
    description = 'Runs the consumer Pact tests'
    group = 'Verification'
    useJUnitPlatform()
    testClassesDirs = sourceSets.contractTest.output.classesDirs
    classpath = sourceSets.contractTest.runtimeClasspath
}

tasks.register('fortifyScan', JavaExec) {
    description = 'Run fortify scan.'
    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

project.ext {
    pacticipant = 'ia_caseApi'
    pacticipantVersion = getCheckedOutGitCommitHash()
}

jacoco {
    toolVersion = "0.8.13"
}

jacocoTestReport {
    executionData(test, integration)
    reports {
        xml.required.set(true)
        csv.required.set(false)
        xml.outputLocation.set(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
    }
}

pitest {
    junit5PluginVersion = '1.2.3'
    targetClasses = ['uk.gov.hmcts.reform.iacaseapi.*']
    excludedClasses = [
            'uk.gov.hmcts.reform.iacaseapi.infrastructure.config.*',
            'uk.gov.hmcts.reform.iacaseapi.Application'
    ]
    threads = 10
    outputFormats = ['XML', 'HTML']
    timestampedReports = false
    failWhenNoMutations = false
    verbose = true
    mutationThreshold = 85
}

tasks.named('pitest') {
    group = "Verification"
}

sonarqube {
    properties {
        property "sonar.projectName", "IA :: Immigration & Asylum case api"
        property "sonar.projectKey", "IACASEAPI"
        property "sonar.coverage.jacoco.xmlReportPaths", layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml").get().asFile
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
        property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/iacaseapi/infrastructure/config/**," +
                "src/main/java/uk/gov/hmcts/reform/iacaseapi/infrastructure/SystemDateProvider.java," +
                "src/main/java/uk/gov/hmcts/reform/iacaseapi/Application.java," +
                "src/main/java/uk/gov/hmcts/reform/iacaseapi/infrastructure/security/idam/IdamAuthoritiesConverter.java," +
                "src/main/java/uk/gov/hmcts/reform/iacaseapi/domain/entities/CaseFlag.java," +
                "src/main/java/uk/gov/hmcts/reform/iacaseapi/infrastructure/clients/model/ccd/**"
        property "sonar.cpd.exclusions", "src/main/java/uk/gov/hmcts/reform/iacaseapi/domain/handlers/**"
    }
}

tasks.named('sonarqube') {
    dependsOn test, integration, jacocoTestReport
    group = "Verification"
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
    }
}

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.0.2'
        mavenBom 'com.fasterxml.jackson:jackson-bom:2.21.3'
        mavenBom "net.serenity-bdd:serenity-bom:5.3.10"
    }

    dependencies {
        dependencySet(group: 'org.junit.jupiter', version: '5.14.4') {
            entry 'junit-jupiter'
            entry 'junit-jupiter-api'
            entry 'junit-jupiter-engine'
            entry 'junit-jupiter-params'
        }

        dependencySet(group: 'org.junit.platform', version: '1.14.4') {
            entry 'junit-platform-commons'
            entry 'junit-platform-engine'
            entry 'junit-platform-launcher'
        }

        dependency group: 'io.rest-assured', name: 'rest-assured', version: '5.5.7'

        dependencySet(group: 'org.mockito', version: '5.23.0') {
            entry 'mockito-core'
            entry 'mockito-junit-jupiter'
        }

        dependency group: 'org.springframework.retry', name: 'spring-retry', version: '2.0.12'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-json'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.security:spring-security-oauth2-client'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'
    implementation 'org.springframework.security:spring-security-oauth2-jose'

    implementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework:spring-context-support'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap'
    implementation 'org.springframework.security:spring-security-crypto'
    implementation 'org.springframework.retry:spring-retry'

    implementation 'com.fasterxml.jackson.core:jackson-core'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
    implementation 'com.fasterxml.jackson.core:jackson-annotations'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'

    implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '8.0.0'
    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.3.3'
    implementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '5.2.0'
    implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: '6.0.0-RELEASE'

    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'

    implementation group: 'commons-io', name: 'commons-io', version: '2.21.0'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.8.17'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.11'

    implementation group: 'com.google.guava', name: 'guava', version: '32.1.3-jre'
    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.13.2'

    implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'

    implementation group: 'org.javamoney.moneta', name: 'moneta-core', version: '1.4.5'

    implementation group: 'org.elasticsearch', name: 'elasticsearch', version: '7.17.29'

    implementation group: 'com.googlecode.libphonenumber', name: 'libphonenumber', version: '8.13.55'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.cloud:spring-cloud-contract-wiremock'

    testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.4.10', classifier: 'all', {
        exclude group: 'commons-io', module: 'commons-io'
        exclude group: 'org.apache.commons', module: 'commons-lang3'
    }

    testImplementation group: 'com.github.hmcts', name: 'document-management-client', version: '7.0.1'
    testImplementation group: 'com.github.hmcts', name: 'ccd-case-document-am-client', version: '1.7.3'

    testImplementation group: 'org.pitest', name: 'pitest', version: '1.9.0'
    testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.9.0'

    testImplementation group: 'com.h2database', name: 'h2', version: '2.4.240'

    testImplementation 'net.serenity-bdd:serenity-rest-assured'
    testImplementation 'net.serenity-bdd:serenity-spring'

    functionalTestImplementation group: 'com.github.hmcts', name: 'core-case-data-store-client', version: '5.2.0'

    //pact contract testing
    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: '4.6.20'

    smokeTestImplementation 'org.flywaydb:flyway-database-postgresql'

    contractTestImplementation sourceSets.main.runtimeClasspath
    contractTestImplementation sourceSets.test.runtimeClasspath

    integrationTestImplementation sourceSets.main.runtimeClasspath
    integrationTestImplementation sourceSets.test.runtimeClasspath

    functionalTestImplementation sourceSets.main.runtimeClasspath
    functionalTestImplementation sourceSets.test.runtimeClasspath

    smokeTestImplementation sourceSets.main.runtimeClasspath
    smokeTestImplementation sourceSets.test.runtimeClasspath

    contractTestImplementation sourceSets.main.runtimeClasspath
    contractTestImplementation sourceSets.test.runtimeClasspath
}

test {
    useJUnitPlatform()
    retry {
        maxRetries = 3
        maxFailures = 20 // Optional attribute
    }
}

tasks.register('runAndPublishConsumerPactTests', Test) {
    logger.lifecycle("Runs pact Tests")
    testClassesDirs = sourceSets.contractTest.output.classesDirs
    classpath = sourceSets.contractTest.runtimeClasspath

}

pact {
    broker {
        pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
    }
    publish {
        pactDirectory = 'pacts'
        tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
        version = project.pacticipantVersion
    }
}

pactPublish {
    pactPublish = project.pact.publish
}

runAndPublishConsumerPactTests.finalizedBy pactPublish

dependencyCheck {
    suppressionFile = 'config/owasp/suppressions.xml'
}

dependencyUpdates.resolutionStrategy = {
    componentSelection { rules ->
        rules.all { ComponentSelection selection ->
            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm'].any { qualifier ->
                selection.candidate.version ==~ /(?i).*[.-]${qualifier}[.\d-]*/
            }
            if (rejected) {
                selection.reject('Release candidate')
            }
        }
    }
}

static def getCheckedOutGitCommitHash() {
    'git rev-parse --verify --short HEAD'.execute().text.trim()
}

gradle.startParameter.continueOnFailure = true

bootJar {
    getArchiveFileName().set(jarName)
    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}

// this is required to force Java running on the Azure Windows Server OS into using
// UTF-8 as the default character set instead of windows-1252 which causes issues.
// this setting only applies when running via gradle bootRun -- see web.config for the
// java flag that configures the deployed appllications
applicationDefaultJvmArgs = ["-Dfile.encoding=UTF-8"]

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}

